  * Indexing a group (AtomGroup, ResidueGroup, or SegmentGroup) with None
    raises a TypeError (Issue #3092, PR #3517)
  * TRZReader now defaults to a `dt` of 1.0 (instead of 0.0 previously) when
    it cannot be obtained from file (Issue #3257)
  * Dropped python 3.6 support and raised minimum numpy version to 1.18.0
    (NEP29)

Deprecations


08/21/21 tylerjereddy, richardjgowers, IAlibay, hmacdope, orbeckst, cbouy,
         lilyminium, daveminh, jbarnoud, yuxuanzhuang, VOD555, ianmkenney,
         calcraven，xiki-tempula, mieczyslaw, manuel.nuno.melo, PicoCentauri,
         hanatok, rmeli, aditya-kamath, tirkarthi, LeonardoBarneschi, hejamu,
         biogen98, orioncohen, z3y50n, hp115, ojeda-e, thadanipaarth, HenryKobin,
         1ut, sulays, ahy3nz, fiszczyp, fiona-naughton

  * 2.0.0

Fixes
  * Added an `rdkit_kwargs` parameter to pass arguments to the RDKitConverter
    from the `select_atoms` method (Issue #3319, PR #3324)
  * Fixes AtomGroup.unique, ResidueGroup.unique, SegmentGroup.unique not
    sorting the output atoms. The returned group is now always a copy.
    (Issue #3364, Issue #2977, PR #3368)
  * Only GRO files with unit cells defined with 3 or 9 entries are now
    supported (Issue #3305)
  * Ensures that reading and writing of GRO files with missing unit cell
    information is consistently treated (Issue #3305)
  * Fixed sometimes wrong sorting of atoms into fragments when unwrapping
    (Issue #3352, PR #3353)
  * Fixed missing array flatten preventing PCA from running when mean positions
    provided and bugs causing tests to incorrectly pass (Issue #2728, PR #3296)
  * DL_POLY HISTORY file may contain unit cell dimensions even if there are
    no periodic boundary conditions (imcom=0) (Issue #3314, PR #3312).
  * New RDKitConverter cache system to fix issue #2958 (PR #2942)
  * Fixed OpenMM converter documentation not showing up in the Converters
    section (Issue #3262, PR #2882)